--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.raveline.daggerinjection">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
-        android:name=".dagger.application.SmartPhoneApplication"
+        android:name=".mvvm.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DaggerInjection">
-        <activity android:name=".mvvm.presentation.artist.ArtistActivity"></activity>
+        android:theme="@style/Theme.DaggerInjection"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".mvvm.presentation.artist.ArtistActivity" />
         <activity android:name=".mvvm.presentation.movie.MovieActivity" />
         <activity android:name=".mvvm.presentation.tv.TvShowActivity" />
         <activity
