--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,12 @@ android {
     buildFeatures {
         dataBinding = true
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -125,16 +131,34 @@ dependencies {
 
     // optional - Test helpers for LiveData
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation  "com.google.truth:truth:1.1.3"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation  "com.google.truth:truth:1.1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // Mockito
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.4.0'
     // Optional -- Mockito framework
     testImplementation 'org.mockito:mockito-core:2.28.2'
+    //roboletric
+    testImplementation 'org.robolectric:robolectric:4.4'
 
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // optional - Test helpers for LiveData
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation  "com.google.truth:truth:1.1.3"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // Mockito
+    // Optional -- Robolectric environment
+    androidTestImplementation 'androidx.test:core:1.4.0'
+    // Optional -- Mockito framework
+    androidTestImplementation 'org.mockito:mockito-core:2.28.2'
+
+    androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
